2020-05-28  Markus Gans  <guru.mail@muenster.de>
	* FColorPalette now also uses polymorphism, so you can now 
	  easily create your own color palette theme

2020-05-26  Markus Gans  <guru.mail@muenster.de>
	* FWidgetColors now uses polymorphism, so you can now easily 
	  create your own widget color theme
	* FApplication has got the new virtual method processExternalUserEvent() 
	  for user code

2020-05-24  Markus Gans  <guru.mail@muenster.de>
	* New class FStringStream implements input and output operations 
	  on FString based streams
	* Fixed memory leak in FString move assignment operator

2020-05-21  Markus Gans  <guru.mail@muenster.de>
	* Fixed the event queue in FApplication

2020-05-16  Markus Gans  <guru.mail@muenster.de>
	* More direct access to the static FTerm functions

2020-05-13  Markus Gans  <guru.mail@muenster.de>
	* The new class FLogger for logging, which can be redirected 
	  to different I/O channels
	* Adding the event-log example to show the logging functionality 

2020-05-02  Markus Gans  <guru.mail@muenster.de>
	* Transfer of all termcap functions into the FTermcap class

2020-04-28  Markus Gans  <guru.mail@muenster.de>
	* Adding the missing method getClientSize()
	* Static code for the special built-in key sequences

2020-04-15  Markus Gans  <guru.mail@muenster.de>
	* Better support of general arrow keys
	* Improved event handling code

2020-04-13  Markus Gans  <guru.mail@muenster.de>
	* Several small code improvements

2020-04-09  Markus Gans  <guru.mail@muenster.de>
	* A dialog can now be displayed without a framing border.
	  Many thanks to basedtho for this tip

2020-03-22  Markus Gans  <guru.mail@muenster.de>
	* A small benchmakt test was added to the Rotozoomer example

2020-03-08  Markus Gans  <guru.mail@muenster.de>
	* A rotozoomer example was added to demonstrate the drawing speed 
	  of FINAL CUT

2020-03-07  Markus Gans  <guru.mail@muenster.de>
	* Fixes keyboard input buffer problem when opening a modal dialog